--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <title>TV Malaysia Online - Nonton Live TV3, Astro, RTM, TV9 Percuma</title>
   <meta name="description" content="Nonton TV Malaysia online secara percuma. Live streaming TV3, Astro, RTM, TV9, Sukan, Drama, Berita terkini. Kualiti HD tanpa bayaran.">
   <meta name="keywords" content="tv malaysia online, live tv malaysia, tv3 live, astro online, rtm streaming, tv9 live, nonton tv percuma, streaming malaysia">
+
+  <!-- Di dalam <head> di index.html -->
+<meta http-equiv="X-Frame-Options" content="DENY">
+<meta http-equiv="X-XSS-Protection" content="1; mode=block">
+<meta http-equiv="X-Content-Type-Options" content="nosniff">
+<meta name="referrer" content="strict-origin-when-cross-origin">
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
